syntax = "proto3";
import "pressure_unit.proto";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "PressureProto";

message PressureProto {
  int32 pressure = 1;
  optional int32 pressureDiff = 2;
  optional int32 imgIdChangePressure = 3;
  PressureUnitProto pressureUnit = 4;
}